<resources>
    <string name="app_name">Medical-Appointments-Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string-array name="roles_array">
        <item>Doctor</item>
        <item>Patient</item>
    </string-array>
    <string name="choose_role_prompt">Choose Role</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="doctors">doctors</string>
    <string name="patients">patients</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string-array name="specializations_array">
        <item>Cardiology</item>
        <item>Dermatology</item>
        <item>Gastroenterology</item>
        <item>Neurology</item>
        <item>Orthopedics</item>
        <item>Psychiatry</item>
        <item>Obstetrics and Gynecology</item>
        <item>Pulmonology</item>
        <item>Oncology</item>
    </string-array>
    <string name="choose_specialization_prompt">Choose Specialization</string>
    <string name="telephone">Telephone Number</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="title_activity_doctor">DoctorActivity</string>
</resources>