<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".authentification.SignInFragment"
    android:background="@color/darkgreen">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:background="@color/yellowgreen"
        />

</LinearLayout>